# five

./: .gitignore  .pdm-python  README.md  cli.py  demo.py  pyproject.toml  text.txt
fenv/: __init__.py  __main__.py  environment.py  example.fenv  fenv1.py  shell.py
flang/: __init__.py  __main__.py  _depr_constructs.py  api.py  core.py  depr_processors.py  deprecated_processors.py  exceptions.py  flang_parser.py  flang_parser2.py  flang_parser3.py  flang_redactor.py  helpers.py  interactive_flang_object.py  parser.py  processors.py  regex_lib.py  structures.py  structures_depr.py  test_parser.py  tree.py  utils.py
flang/_deprecated/: __init__.py  deprecated_processors_0.py  deprecated_processors_1.py  execution_environment.py  spec_evaluation_runtime.py  structures_depr.py
flang/core/: __init__.py  evaluation.py  generators.py  intermediate.py  parser.py  processors.py  subparsers.py  text_matcher.py
flang/handlers/: __init__.py
flang/parsers/: __init__.py  flang_xml_parser.py  xml.py
flang/processing/: __init__.py  core.py  evaluation.py  generators.py  matchers.py
flang/runtime/: __init__.py  project_parsing_runtime.py  spec_evaluation_runtime.py  subparsers.py
flang/structures/: __init__.py  ast.py  common.py  constructs.py  event_storage.py  events.py  input.py  interactions.py  patch.py  runtime.py  searchable_tree.py  spec.py  spec_deprecated.py  virtual_file.py
flang/utils/: abstracts.py  attributes.py  common.py  constructs.py  dataclasses.py  evaluation.py  exceptions.py  file_synchronization.py  helpers.py  (+1 more)
tests/: test_testing.py
(+24 files in other folders)
